update case 12 and 116

--- a/casestudies/116/casestudy/www/layout/case_id_116_id_237_c_bio.html
+++ b/casestudies/116/casestudy/www/layout/case_id_116_id_237_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: John Voskuhl | Cumulative or Discrete Numbers: How Should Bloomberg Measure the Bailout?
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: John Voskuhl | Cumulative or Discrete Numbers: How Should Bloomberg Measure the Bailout?
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,257 +84,250 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/116/BloombergBanner.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_116.html" title="Home"><span>Biography: John Voskuhl</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_116.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_832.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_833.html">Brief Histories</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_834.html">The Great Crash</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_835.html">Skeptical Media</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_836.html">Suing the Fed</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_837.html">The Data Dump</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_838.html">Visualizing Data</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_839.html">Total or Individual?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_840.html">Parsing the Numbers</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_116_id_841.html">Appendix 1</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/116/Bloomberg&#32;and&#32;FedReserve_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_116.html">Home</a></div>		
-		<h1 class="title">Biography: John&nbsp;Voskuhl</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:right;padding:10px">
-	<img src="../../files/photos/817/voskuhl&#32;photo&#32;2.jpg" style="height: 275px; width: 200px;" /><br />
-	<p class="caption">
-		John Voskuhl<br />
-		Photo from John Voskuhl</p>
-</div>
-<p>
-	John Voskuhl was an editor on the Projects &amp; Investigations Team for<em> Bloomberg News</em>. A graduate of the University of Kentucky, as of 2011 he had been a professional journalist for more than 25 years. A resident of South Florida, Voskuhl had previously worked at the<em> Miami Herald</em>, the <em>Lexington Herald-Leader</em> and the (Louisville) <em>Courier-Journal</em>.</p>
-<p>
-	<i>Voskuhl on Bloomberg&#39;s team of qualified financial journalists.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/342/VoskuhlBioAudio.mp3" /></p>
-</div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/116/BloombergBanner.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tbody>
+      <tr>
+       <td style="width: 100%;">
+        <h1 class="site-name">
+         <a href="case_id_116.html" title="Home">
+          <span>
+           Biography: John Voskuhl
+          </span>
+         </a>
+        </h1>
+       </td>
+       <td class="kcsi_logo">
+        <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+        </a>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_116.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_832.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_833.html">
+          Brief Histories
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_834.html">
+          The Great Crash
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_835.html">
+          Skeptical Media
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_836.html">
+          Suing the Fed
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_837.html">
+          The Data Dump
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_838.html">
+          Visualizing Data
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_839.html">
+          Total or Individual?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_840.html">
+          Parsing the Numbers
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_841.html">
+          Appendix 1
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_116_id_236_c_bio.html">Bob&nbsp;Ivry</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_116_id_237_c_bio.html">John&nbsp;Voskuhl</a></li>
-
-<li class="leaf"><a  href="case_id_116_id_238_c_bio.html">Robert&nbsp;Friedman</a></li>
-
-<li class="leaf"><a  href="case_id_116_id_239_c_bio.html">Phil&nbsp;Kuntz</a></li>
-
-<li class="leaf"><a  href="case_id_116_id_240_c_bio.html">Amanda&nbsp;Bennett</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/116/Bloomberg and FedReserve_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_116.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: John Voskuhl
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:right;padding:10px">
+         <img src="../../files/photos/817/voskuhl photo 2.jpg" style="height: 275px; width: 200px;"/>
+         <br/>
+         <p class="caption">
+          John Voskuhl
+          <br/>
+          Photo from John Voskuhl
+         </p>
+        </div>
+        <p>
+         John Voskuhl was an editor on the Projects &amp; Investigations Team for
+         <em>
+          Bloomberg News
+         </em>
+         . A graduate of the University of Kentucky, as of 2011 he had been a professional journalist for more than 25 years. A resident of South Florida, Voskuhl had previously worked at the
+         <em>
+          Miami Herald
+         </em>
+         , the
+         <em>
+          Lexington Herald-Leader
+         </em>
+         and the (Louisville)
+         <em>
+          Courier-Journal
+         </em>
+         .
+        </p>
+        <p>
+         <i>
+          Voskuhl on Bloomberg's team of qualified financial journalists.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/342/VoskuhlBioAudio.mp3"/>-->
+         <audio controls><source src="../../files/audios/342/VoskuhlBioAudio.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_116_id_236_c_bio.html">
+          Bob Ivry
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_116_id_237_c_bio.html">
+          John Voskuhl
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_238_c_bio.html">
+          Robert Friedman
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_239_c_bio.html">
+          Phil Kuntz
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_116_id_240_c_bio.html">
+          Amanda Bennett
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
