--- a/casestudies/86/casestudy/www/layout/case_id_86_id_186_c_bio.html
+++ b/casestudies/86/casestudy/www/layout/case_id_86_id_186_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Gaby Darbyshire | Personal Foul? Deadspin and an Iconic Athlete
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Gaby Darbyshire | Personal Foul? Deadspin and an Iconic Athlete
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,230 +84,210 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/86/banner.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_86.html" title="Home"><span>Biography: Gaby Darbyshire</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_86.html">TItle Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_668.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_669.html">The Rise of <i>Deadspin</i></a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_670.html">Blogging and Journalism</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_671.html">Tracking Stories Down</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_672.html">From 'Cowgirl' to Gameday Host</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_673.html">Dead End</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_674.html">To Blog or Not to Blog</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_86_id_675.html">Giving Notice</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/86/Deadspin&#32;and&#32;an&#32;Iconic&#32;Athelete_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_86.html">Home</a></div>		
-		<h1 class="title">Biography: Gaby&nbsp;Darbyshire</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<br />
-	<img src="../../files/photos/539/gabby&#32;darbyshire.JPG" style="margin-left: 10px; margin-right: 10px; float: left; " />Gaby Darbyshire was the chief operating officer for Gawker Media. She was a barrister in England until 1999, when she moved to the United States and began a career in high tech doing strategy and legal affairs. Her law degree is from City University in England.</p>
-<p>
-	<i>Hear More: Gaby Darbyshire discusses her role at Gawker Media&nbsp;</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/220/GD&#32;bio&#32;clip.mp3" /></p>
-</div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/86/banner.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tbody>
+      <tr>
+       <td style="width: 100%;">
+        <h1 class="site-name">
+         <a href="case_id_86.html" title="Home">
+          <span>
+           Biography: Gaby Darbyshire
+          </span>
+         </a>
+        </h1>
+       </td>
+       <td class="kcsi_logo">
+        <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+        </a>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_86.html">
+          TItle Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_668.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_669.html">
+          The Rise of
+          <i>
+           Deadspin
+          </i>
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_670.html">
+          Blogging and Journalism
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_671.html">
+          Tracking Stories Down
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_672.html">
+          From 'Cowgirl' to Gameday Host
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_673.html">
+          Dead End
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_674.html">
+          To Blog or Not to Blog
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_675.html">
+          Giving Notice
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_86_id_185_c_bio.html">A.J.&nbsp;Daulerio</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_86_id_186_c_bio.html">Gaby&nbsp;Darbyshire</a></li>
-
-<li class="leaf"><a  href="case_id_86_id_187_c_bio.html">Will&nbsp;Leitch</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/86/Deadspin and an Iconic Athelete_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_86.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Gaby Darbyshire
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <p>
+         <br/>
+         <img src="../../files/photos/539/gabby darbyshire.JPG" style="margin-left: 10px; margin-right: 10px; float: left; "/>
+         Gaby Darbyshire was the chief operating officer for Gawker Media. She was a barrister in England until 1999, when she moved to the United States and began a career in high tech doing strategy and legal affairs. Her law degree is from City University in England.
+        </p>
+        <p>
+         <i>
+          Hear More: Gaby Darbyshire discusses her role at Gawker Media
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/220/GD bio clip.mp3"/>-->
+         <audio controls><source src="../../files/audios/220/GD&#32;bio&#32;clip.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_86_id_185_c_bio.html">
+          A.J. Daulerio
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_86_id_186_c_bio.html">
+          Gaby Darbyshire
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_86_id_187_c_bio.html">
+          Will Leitch
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
