--- a/casestudies/54/casestudy/www/layout/case_id_54_id_142_c_bio.html
+++ b/casestudies/54/casestudy/www/layout/case_id_54_id_142_c_bio.html
@@ -246,6 +246,7 @@ font-style:italic;
          </em>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/121/steven_drummond_bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/121/steven_drummond_bio.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
