--- a/casestudies/59/casestudy/www/layout/case_id_59_id_154_c_bio.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_154_c_bio.html
@@ -234,6 +234,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/151/Lyon during first gulf war.mp3"/>-->
+         <audio controls><source src="../../files/audios/151/Lyon&#32;during&#32;first&#32;gulf&#32;war.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
