--- a/casestudies/59/casestudy/www/layout/case_id_59_id_155_c_bio.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_155_c_bio.html
@@ -242,6 +242,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/152/Daniszewski on career.mp3"/>-->
+         <audio controls><source src="../../files/audios/152/Daniszewski&#32;on&#32;career.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
