--- a/casestudies/59/casestudy/www/layout/case_id_59_id_158_c_bio.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_158_c_bio.html
@@ -238,6 +238,7 @@ font-style:italic;
          </i>
          <br>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/158/Collins bio on being a Navy photographer.mp3"/>-->
+          <audio controls><source src="../../files/audios/158/Collins&#32;bio&#32;on&#32;being&#32;a&#32;Navy&#32;photographer.mp3" type="audio/mpeg"></audio>
          </br>
         </p>
        </div>
